--- a/wiki/%E3%81%B6%E3%82%93%E3%81%BD%E3%81%86.wikitext
+++ b/wiki/%E3%81%B6%E3%82%93%E3%81%BD%E3%81%86.wikitext
@@ -1,3 +1,5 @@
-わたしは　カナハイヤ　です。いちねん　まえ　から　にほんご　を　ならて　います。
-if anyone have a complete/partial Japanese Grammar material,then please mail it to me.
-Kanhaiya.Prasad@Gmail.Com
+==Japanese==
+===Noun===
+'''ぶんぽう''' ([[文法]], bunpou)
+
+# [[grammar]]
