--- a/wiki/gospel.wikitext
+++ b/wiki/gospel.wikitext
@@ -1,7 +1,9 @@
 ==English==
 ===Noun===
-#The story of [[Christ]],as related in the Bible books of ,Matthew,Mark,Luke and John<p> 
+#The story of [[Christ]],as related in the Bible books of ,Matthew,Mark,Luke and John
+
 ===Etymology===
 Old English ''godspel'' god- "''good''"+ spel "''message''"
+
 ===Translations===
-*'''spanish''', evangelio
+*Spanish: [[evangelio]]
