--- a/wiki/Lucifer.wikitext
+++ b/wiki/Lucifer.wikitext
@@ -1,5 +1,13 @@
-==Proper Noun==
-#A name or title of [[Satan]],refering to him before his fall into sin
+==English==
+===Proper Noun===
+'''Lucifer'''
+
+#A name or title of [[Satan]], refering to him before his fall into sin
 #The planet Venus as the daystar
-==Etmylogy==
-From [[Latin]],''lucifer'',light-bearer
+
+===Etymology===
+From [[Latin]], ''[[lux]] + fer'', light-bearer
+
+===Translations===
+*French: Lucifer
+*Italian: [[Lucifero]]
