--- a/wiki/Christian.wikitext
+++ b/wiki/Christian.wikitext
@@ -1,5 +1,5 @@
 ===Noun===
-# A person who believes that Jesus of Nazareth is the Jewish [[messiah]], as related in the [[New Testament]].
+# A person who follows Jesus of Nazareth, as related in the [[New Testament]].
 # A person from the [[Western World]] who claims this name (e.g., ''Christians vs. Moors'').
 
 ====Translations====
