--- a/wiki/Christian.wikitext
+++ b/wiki/Christian.wikitext
@@ -1,5 +1,5 @@
 ===Noun===
-# A person who follows Jesus of Nazareth, as related in the [[New Testament]].
+# A follower of Jesus of Nazareth. A person who believes that He is their Savior from God's justified wrath of their sins through His death on the cross, and their Lord whom they obey.
 # A person from the [[Western World]] who claims this name (e.g., ''Christians vs. Moors'').
 
 ====Translations====
