--- a/wiki/fiasco.wikitext
+++ b/wiki/fiasco.wikitext
@@ -1,5 +1,3 @@
-[[da:Fiasko]]
-
 A '''fiasco''' (pl. '''fiascoes''') means a complete or ridiculous failure, especially of a pretentious undertaking. 
 
 The word is originally [[Italian language|Italian]] and means a rounded wine bottle, sometimes wrapped by a straw basked, such as used traditionally for the [[Chianti]] wine. The metaphorical connection is "they wanted the wine but all they got was an empty bottle."
@@ -15,4 +13,6 @@ The word is originally [[Italian language|Italian]] and means a rounded wine bot
 *The Japanese [[fifth generation computer systems project]].
 *The [[dot-com]] bubble.
 
-{{msg:stub}}
+{{stub}}
+[[da:Fiasko]]
+[[de:Fiasko]]
