--- a/wiki/platypus.wikitext
+++ b/wiki/platypus.wikitext
@@ -1,6 +1,5 @@
 ===Noun===
-
-* A '''platypus''' is an egg-laying, semiaquatic mammal with a bill like that of a duck, a tail like that of a beaver, a waterproof pelt, and (in males) flat webbed feet with poisonous spurs on the inside of the back legs.  The platypus, (''Ornithorhynchus anatinus'') lives in the freshwater streams of Tasmania and eastern Australia.
+#A '''platypus''' is an egg-laying, semiaquatic mammal with a bill like that of a duck, a tail like that of a beaver, a waterproof pelt, and (in males) flat webbed feet with poisonous spurs on the inside of the back legs.  The platypus, (''Ornithorhynchus anatinus'') lives in the freshwater streams of Tasmania and eastern Australia.
 
 ===Etymology===
 
