--- a/wiki/Uranus.wikitext
+++ b/wiki/Uranus.wikitext
@@ -19,6 +19,8 @@ Second declension
 *French: [[uranus]] ''m'' (3)
 *German: [[Uranus]] ''m''
 *Greek: [[Uranos]] ''m''
+*Japanese:[[天王星]]（てんおうせい）(3)
+
 *Latin: [[Uranus]] ''m''
 *Lithuanian: [[Uranas]] ''m''
 *{{ms}}: [[Uranus]] (3)
