--- a/wiki/%D7%9B%D7%A8%D7%95%D7%91%D7%99%D7%9D.wikitext
+++ b/wiki/%D7%9B%D7%A8%D7%95%D7%91%D7%99%D7%9D.wikitext
@@ -1,3 +1,4 @@
 ==Hebrew==
-==Noun==  [[cherub]]
-==Pronunciation== (KHay-'''ROOV''')
+===Pronunciation=== (KHay-'''ROOV''')
+===Noun===
+#[[cherub]]
