--- a/wiki/%C3%8Drland.wikitext
+++ b/wiki/%C3%8Drland.wikitext
@@ -1,3 +1,3 @@
 ==Anglo-Saxon==
 ===Proper noun===
-# Ireland.  A large island in NW Europe. Also, the sovereign state -- official name Republic of Ireland (Poblacht na hÉireann) -- occupying most of that island.
+# [[Ireland]].
