--- a/wiki/%E7%BE%9E.wikitext
+++ b/wiki/%E7%BE%9E.wikitext
@@ -11,14 +11,14 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#disgrace, shame
-*# ashamed
-*# shy
+*# [[disgrace]], [[shame]]
+*# [[ashamed]]
+*# [[shy]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,15 +30,35 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': sau1
 
+===Compounds===
+*[[羞惭]]
+*[[羞耻]]
+*[[羞答答]], [[羞答答的]]
+*[[羞愤]]
+*[[羞口]]
+*[[羞愧]]
+*[[羞恼]]
+*[[羞怯]]
+*[[羞人]]]
+*[[羞人答答]], [[羞人答答的]]
+*[[羞辱]]
+*[[羞臊]]
+*[[羞涩]]
+*[[羞羞答答]]
+*[[羞与为伍]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[しゅう]] (shū)
 ** '''[[Kun]]''': [[すすめる]] (susumeru), [[はじる]] (hajiru)
+
+===Compounds===
+*[[羞恥]]
 
 * '''Other info''':  
 
