--- a/wiki/%E9%AA%8C.wikitext
+++ b/wiki/%E9%AA%8C.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#test, examine, inspect
-*# verify
+*# [[test]], [[examine]], [[inspect]]
+*# [[verify]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,6 +33,22 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[驗]]
+
+===Compounds===
+*[[验单]]
+*[[验电器]]
+*[[验方]]
+*[[验关]]
+*[[验光]]
+*[[验核]]
+*[[验货]]
+*[[验看]]
+*[[验明]]
+*[[验尸]]
+*[[验收]]
+*[[验算]]
+*[[验血]]
+*[[验证]]
 
 * '''Other info''': 
 
