--- a/wiki/%E7%A9%B4.wikitext
+++ b/wiki/%E7%A9%B4.wikitext
@@ -11,13 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#cave, den, hole
+*# [[cave]], [[den]], [[hole]]
 *# rad. no. 116
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,11 +29,19 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': yut6
 
+===Compounds===
+*[[穴宝盖儿]]
+*[[穴道]]
+*[[穴居野处]]
+*[[穴头]]
+*[[穴位]]
+*[[穴隙]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[けつ]] (ketsu)
