--- a/wiki/%E6%82%AC.wikitext
+++ b/wiki/%E6%82%AC.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#hang, suspend, hoist
-*# be hung
+*# [[hang]], [[suspend]], [[hoist]]
+*# be [[hung]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,6 +33,38 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[懸]]
+
+===Compounds===
+*[[悬案]]
+*[[悬肠挂肚]]
+*[[悬揣]]
+*[[悬垂]]
+*[[悬吊]]
+*[[悬而未决]]
+*[[悬浮]]
+*[[悬挂]]
+*[[悬河]]
+*[[悬乎]]
+*[[悬空]]
+*[[悬梁]]
+*[[悬梁刺股]]
+*[[悬铃木]]
+*[[悬虑]]
+*[[悬念]]
+*[[悬赏]]
+*[[悬殊]]
+*[[悬索桥]]
+*[[悬梯]]
+*[[悬停]]
+*[[悬腕]]
+*[[悬望]]
+*[[悬系]]
+*[[悬心]]
+*[[悬心吊胆]]
+*[[悬崖]]
+*[[悬崖勒马]]
+*[[悬岩]]
+*[[悬肘]]
 
 * '''Other info''': 
 
