--- a/wiki/%E8%B4%9F.wikitext
+++ b/wiki/%E8%B4%9F.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#load, burden
-*# carry, bear
+*# [[load]], [[burden]]
+*# [[carry]], [[bear]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,6 +33,33 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[負]]
+
+===Compounds===
+*[[负担]]
+*[[负电]]
+*[[负荷]]
+*[[负极]]
+*[[负荆请罪]]
+*[[负疚]]
+*[[负离子]]
+*[[负利率]]
+*[[负面]]
+*[[负片]]
+*[[负气]]
+*[[负情]]
+*[[负屈]]
+*[[负伤]]
+*[[负数]]
+*[[负心]]
+*[[负薪救火]]
+*[[负义]]
+*[[负隅]]
+*[[负约]]
+*[[负载]]
+*[[负责]]
+*[[负债]]
+*[[负重]]
+*[[负罪]]
 
 * '''Other info''': 
 
