--- a/wiki/devilish.wikitext
+++ b/wiki/devilish.wikitext
@@ -16,7 +16,8 @@
 *Dutch: [[duivels]], [[duivelse]]
 *French: [[diabolique]] ''m/f''
 *Greek: [[διαβολικός]] ''m'', [[διαβολική]] ''f'', [[διαβολικό]] ''n''
-*{{ja}}: [[デモーニッシュ]] (demonisshu)
+*Italian: [[diabolico]]
+*{{ja}}: [[残忍な]], [[デモーニッシュ]] (demonisshu)
 *Korean: [[악마 같은]]
 *Russian: [[дьявольски]]<!-- please check - does it inflect? -->
 *Spanish: [[diabólico]] ''m'', [[diabólica]] ''f''
