--- a/wiki/James.wikitext
+++ b/wiki/James.wikitext
@@ -5,7 +5,37 @@
 ===Proper Noun===
 '''James'''
 
-#an [[English]] male [[given name]]
+#an [[English]] male [[given name]] meaning "held by the heel, protected, supplanted."
 
 ===Etymology===
-From Late Latin '''[[Iacomus]]''', dialect variant of '''[[Iacobus]]''', from New Testament Greek '''[[Ἰάκωβος]]''' (Iacōbos), from Hebrew '''[[יעקב]]''' (Yaʻaqov). Cognates include '''[[Jacob]]''', '''[[Jaime]]'''.
+Came into English from the French variation [[Gemmes]] of the Late Latin '''[[Iacomus]]''', dialect variant of '''[[Iacobus]]''', from New Testament Greek '''[[Ἰάκωβος]]''' (Iacōbos), from Hebrew '''[[יעקב]]''' (Yaʻaqov). Cognates include '''[[Jacob]]'''
+
+====Variant spellings====
+*[[Jaymes]]
+
+====Female equivalents====
+*[[Jamesina]], [[Jamey]], [[Jaymie]], [[Jaimie]], [[Jaimita]], [[Gemina]]
+
+====Diminutives====
+*[[Jim]], [[Jay]], [[Jamie]], [[Jimmy]], [[Jimmie]], [[Jimi]], [[Jamsey]], [[Jame]], [[Jameson]], [[Jimbo]], [[Jake]], [[Jem]], [[Jemmy]]
+
+
+====Translations====
+
+*[[Late Latin]]: [[Jacomus]]
+*[[Occitan]]: [[Jammes]], [[James]]
+*[[Provencal]]: [[Jacme]]
+*[[Catalan]]: [[Jaume]], [[Xaume]]
+*[[Galacian]]: [[Xaime]]
+*[[Castillan]]: [[Jaime]]
+*[[Spanish]]: [[Diego]], [[Jaimito]], [[Jacóme]], [[Iago]]
+*[[French]]: [[Jacques]], [[Jame]], [[Gemmes]] (Normandy Variation), [[Gemme]] (Normandy Variation)
+[[Welsh]] [[Iago]]
+*[[Italian]]: [[Giacomo]], [[Iago]]
+*[[Irish]]: [[Séamas]], [[Seamus]] (anglicized), [[Shamus]] (anglicized), [[Séimí]]
+*[[Scottish]]: [[Seumas]], [[Sheumais]], [[Jamsey]], [[Hamish]] (Anglicized)
+*[[Cornish]]: [[Jago]]
+*[[Basque]]: [[Jakes]]
+*[[Portuguese]]: [[Diogo]], [[Jaime]], [[Tiago]]
+*[[Hawaiian]]: [[Kimo]]
+*[[Breton]]: [[Jagu]]
