--- a/wiki/James.wikitext
+++ b/wiki/James.wikitext
@@ -30,7 +30,7 @@ Came into English from the French variation [[Gemmes]] of the Late Latin '''[[Ia
 *[[Castillan]]: [[Jaime]]
 *[[Spanish]]: [[Diego]], [[Jaimito]], [[Jacóme]], [[Iago]]
 *[[French]]: [[Jacques]], [[Jame]], [[Gemmes]] (Normandy Variation), [[Gemme]] (Normandy Variation)
-[[Welsh]] [[Iago]]
+*[[Welsh]] [[Iago]]
 *[[Italian]]: [[Giacomo]], [[Iago]]
 *[[Irish]]: [[Séamas]], [[Seamus]] (anglicized), [[Shamus]] (anglicized), [[Séimí]]
 *[[Scottish]]: [[Seumas]], [[Sheumais]], [[Jamsey]], [[Hamish]] (Anglicized)
