--- a/wiki/%E6%95%88.wikitext
+++ b/wiki/%E6%95%88.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#result, effect
-*# effectiveness
+*# [[result]], [[effect]]
+*# [[effectiveness]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -31,15 +31,35 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': haau6
 
+===Compounds===
+*[[效法]]
+*[[效仿]]
+*[[效果]]
+*[[效劳]]
+*[[效力]]
+*[[效率]]
+*[[效命]]
+*[[效能]]
+*[[效死]]
+*[[效验]]
+*[[效益]]
+*[[效应]]
+*[[效应器]]
+*[[效用]]
+*[[效尤]]
+*[[效忠]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[こう]] (kō)
 ** '''[[Kun]]''': [[きく]] (kiku)
+
+* shinjitai: [[効]]
 
 * '''Other info''':  
 
