--- a/wiki/James.wikitext
+++ b/wiki/James.wikitext
@@ -27,7 +27,7 @@ Came into English from the French variation [[Gemmes]] of the Late Latin '''[[Ia
 *[[Provencal]]: [[Jacme]]
 *[[Catalan]]: [[Jaume]], [[Xaume]]
 *[[Galacian]]: [[Xaime]]
-*[[Castillan]]: [[Jaime]]
+*[[Castilan]]: [[Jaime]]
 *[[Spanish]]: [[Diego]], [[Jaimito]], [[Jacóme]], [[Iago]]
 *[[French]]: [[Jacques]], [[Jame]], [[Gemmes]] (Normandy Variation), [[Gemme]] (Normandy Variation)
 *[[Welsh]] [[Iago]]
