--- a/wiki/James.wikitext
+++ b/wiki/James.wikitext
@@ -26,8 +26,8 @@ Came into English from the French variation [[Gemmes]] of the Late Latin '''[[Ia
 *[[Occitan]]: [[Jammes]], [[James]]
 *[[Provencal]]: [[Jacme]]
 *[[Catalan]]: [[Jaume]], [[Xaume]]
-*[[Galacian]]: [[Xaime]]
-*[[Castilan]]: [[Jaime]]
+*[[Galician]]: [[Xaime]]
+*[[Castilian]]: [[Jaime]]
 *[[Spanish]]: [[Diego]], [[Jaimito]], [[Jacóme]], [[Iago]]
 *[[French]]: [[Jacques]], [[Jame]], [[Gemmes]] (Normandy Variation), [[Gemme]] (Normandy Variation)
 *[[Welsh]] [[Iago]]
