--- a/wiki/James.wikitext
+++ b/wiki/James.wikitext
@@ -29,13 +29,14 @@ Came into English from the French variation [[Gemmes]] of the Late Latin '''[[Ia
 *[[Galician]]: [[Xaime]]
 *[[Castilian]]: [[Jaime]]
 *[[Spanish]]: [[Diego]], [[Jaimito]], [[Jacóme]], [[Iago]]
-*[[French]]: [[Jacques]], [[Jame]], [[Gemmes]] (Normandy Variation), [[Gemme]] (Normandy Variation)
+*[[French]]: [[Jacques]], [[Jame]], [[Gemmes]] ([Normandy]]), [[Gemme]] ([[Normandy]])
 *[[Welsh]] [[Iago]]
 *[[Italian]]: [[Giacomo]], [[Iago]]
-*[[Irish]]: [[Séamas]], [[Seamus]] (anglicized), [[Shamus]] (anglicized), [[Séimí]]
-*[[Scottish]]: [[Seumas]], [[Sheumais]], [[Jamsey]], [[Hamish]] (Anglicized)
+*[[Irish]]: [[Séamas]], [[Seamus]] ([[anglicized]]), [[Shamus]] ([[anglicized]]), [[Séimí]]
+*[[Scottish]]: [[Seumas]], [[Sheumais]], [[Jamsey]], [[Hamish]] (anglicized)
 *[[Cornish]]: [[Jago]]
 *[[Basque]]: [[Jakes]]
 *[[Portuguese]]: [[Diogo]], [[Jaime]], [[Tiago]]
 *[[Hawaiian]]: [[Kimo]]
 *[[Breton]]: [[Jagu]]
+*[[Japanese]]: ジェームズ, ジェイムス
