--- a/wiki/James.wikitext
+++ b/wiki/James.wikitext
@@ -39,4 +39,4 @@ Came into English from the French variation [[Gemmes]] of the Late Latin '''[[Ia
 *[[Portuguese]]: [[Diogo]], [[Jaime]], [[Tiago]]
 *[[Hawaiian]]: [[Kimo]]
 *[[Breton]]: [[Jagu]]
-*[[Japanese]]: ジェームズ, ジェイムス
+*[[Japanese]]: ジェームズ, ジェイムズ
