--- a/wiki/James.wikitext
+++ b/wiki/James.wikitext
@@ -22,21 +22,21 @@ Came into English from the French variation [[Gemmes]] of the Late Latin '''[[Ia
 
 ====Translations====
 
+*[[Basque]]: [[Jakes]]
+*[[Breton]]: [[Jagu]]
+*[[Castilian]]: [[Jaime]]
+*[[Catalan]]: [[Jaume]], [[Xaume]]
+*[[Cornish]]: [[Jago]]
+*French: [[Jacques]], [[Jame]], [[Gemmes]] ([[Normandy]]), [[Gemme]] ([[Normandy]])
+*[[Galician]]: [[Xaime]]
+*[[Hawaiian]]: [[Kimo]]
+*Italian: [[Giacomo]], [[Iago]]
+*[[Irish]]: [[Séamas]], [[Seamus]] ([[anglicized]]), [[Shamus]] ([[anglicized]]), [[Séimí]]
+*Japanese: ジェームズ, ジェイムズ
 *[[Late Latin]]: [[Jacomus]]
 *[[Occitan]]: [[Jammes]], [[James]]
-*[[Provencal]]: [[Jacme]]
-*[[Catalan]]: [[Jaume]], [[Xaume]]
-*[[Galician]]: [[Xaime]]
-*[[Castilian]]: [[Jaime]]
-*[[Spanish]]: [[Diego]], [[Jaimito]], [[Jacóme]], [[Iago]]
-*[[French]]: [[Jacques]], [[Jame]], [[Gemmes]] ([Normandy]]), [[Gemme]] ([[Normandy]])
-*[[Welsh]] [[Iago]]
-*[[Italian]]: [[Giacomo]], [[Iago]]
-*[[Irish]]: [[Séamas]], [[Seamus]] ([[anglicized]]), [[Shamus]] ([[anglicized]]), [[Séimí]]
-*[[Scottish]]: [[Seumas]], [[Sheumais]], [[Jamsey]], [[Hamish]] (anglicized)
-*[[Cornish]]: [[Jago]]
-*[[Basque]]: [[Jakes]]
 *[[Portuguese]]: [[Diogo]], [[Jaime]], [[Tiago]]
-*[[Hawaiian]]: [[Kimo]]
-*[[Breton]]: [[Jagu]]
-*[[Japanese]]: ジェームズ, ジェイムズ
+*[[Provencal]]: [[Jacme]]
+*[[Scottish]]: [[Seumas]], [[Sheumais]], [[Jamsey]], [[Hamish]] (anglicized)
+*Spanish: [[Diego]], [[Jaimito]], [[Jacóme]], [[Iago]]
+*[[Welsh]] [[Iago]]
