--- a/wiki/%E9%9B%84.wikitext
+++ b/wiki/%E9%9B%84.wikitext
@@ -11,14 +11,14 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#male of species
-*# hero
-*# manly
+*# [[male]] of species
+*# [[hero]]
+*# [[manly]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,11 +30,47 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': hung4
 
+===Compounds===
+*[[雄辩]]
+*[[雄兵]]
+*[[雄才大略]]
+*[[雄大]]
+*[[雄风]]
+*[[雄蜂]]
+*[[雄关]]
+*[[雄豪]]
+*[[雄厚]]
+*[[雄花]]
+*[[雄浑]]
+*[[雄鸡]]
+*[[雄健]]
+*[[雄杰]]
+*[[雄劲]]
+*[[雄赳赳]], [[雄赳赳的]]
+*[[雄踞]]
+*[[雄俊]], [[雄骏]]
+*[[雄峻]]
+*[[雄丽]]
+*[[雄奇]]
+*[[雄蕊]]
+*[[雄师]]
+*[[雄视]]
+*[[雄图]]
+*[[雄威]]
+*[[雄伟]]
+*[[雄武]]
+*[[雄心]]
+*[[雄性]]
+*[[雄性激素]]
+*[[雄主]]
+*[[雄壮]]
+*[[雄姿]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ゆう]] (yū)
