--- a/wiki/%E5%89%91.wikitext
+++ b/wiki/%E5%89%91.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': sword, dagger, saber
+* '''Common Meaning''': [[sword]], [[dagger]], [[sabre]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -30,6 +30,14 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[劍]]
+
+===Compounds===
+*[[剑拔弩张]]
+*[[剑客]]
+*[[剑眉]]
+*[[剑术]]
+*[[剑舞]]
+*[[剑侠]]
 
 * '''Other info''': 
 
