--- a/wiki/%E5%89%A3.wikitext
+++ b/wiki/%E5%89%A3.wikitext
@@ -12,45 +12,26 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': sword, dagger, saber
-
 * '''Style''': [[shinjitai]]
 
-----
-
-== [[Chinese]] [[Hanzi]] ==
-
-* '''Romanizations'''
-** [[Mandarin]]
-*** '''[[Pinyin]]''': jiàn (jian4)
-*** '''[[Wade-Giles]]''': chien<sup>4</sup>
-*** '''[[Yale]]''': 
-**[[Cantonese]]
-***'''[[Jyutping]]''':
-***'''[[Penkyamp]]''': 
-***'''[[Yale]]''': 
-
-* '''Other info''': 
+* '''Common Meaning''': [[sword]], [[dagger]], [[sabre]]
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[けん]] (ken)
 ** '''[[Kun]]''': [[つるぎ]] (tsurugi)
 
+===Compounds===
+*[[剣客]]
+*[[剣豪]]
+*[[剣士]]
+*[[剣術]]
+*[[剣道]]
+
 * '''Other info''':  
-
-----
-
-== [[Korean]] [[Hanja]] ==
-
-* '''Pronunciation''': 검
-
-* '''Romanization'''
-** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': geom
-** '''[[McCune-Reischauer]]''': kŏm
 
 ----
 
