/* [[Translations]] */ +Latin <expose#33611>

--- a/wiki/expose.wikitext
+++ b/wiki/expose.wikitext
@@ -8,3 +8,4 @@
 *[[Dutch]]: [[zichtbaar]] [[maken]] (1), [[blootstellen]] (2)
 *[[Finnish]]: [[paljastaa]] (1), [[valottaa]] (2)
 *[[French]]: [[exposer]]
+*Latin: [[exponere]]
