removed poor pronunciation which was for the singular anyway; fmt <כרובים#65693>

--- a/wiki/%D7%9B%D7%A8%D7%95%D7%91%D7%99%D7%9D.wikitext
+++ b/wiki/%D7%9B%D7%A8%D7%95%D7%91%D7%99%D7%9D.wikitext
@@ -1,4 +1,8 @@
 ==Hebrew==
-===Pronunciation=== (KHay-'''ROOV''')
 ===Noun===
-#[[cherub]]
+'''כְּרֻבִים''' ''m pl''
+
+# plural of [[כרוב|כְּרוּב]], [[cherub]]
+
+====Translations====
+*English: [[cherubim]] (''traditional plural''), [[cherubs]] (''modern plural'')
