--- a/wiki/acquaintance.wikitext
+++ b/wiki/acquaintance.wikitext
@@ -1,16 +1,32 @@
 ==English==
 ===Etymology===
-OE. [[aqueintance]], OF. [[acointance]], fr. [[acointier]]. See [[Acquaint]]
+Old English ''[[aqueintance]]'', Old French ''[[acointance]]'', from ''[[acointier]]''. See [[acquaint]]
 
 ===Pronunciation===
 IPA: [[WEAE]] /ʌˈkwen.tɛns/
 
 ===Noun===
-#A state of being acquainted, or of having intimate, or more than slight or superficial, knowledge; personal  knowledge gained by intercourse short of that of friendship or intimacy: ''I know the man; but have no acquaintance with him.''
+#A state of being acquainted, or of having [[intimate]], or more than slight or superficial, knowledge; personal  knowledge gained by [[intercourse]] short of that of friendship or intimacy: ''I know the man; but have no acquaintance with him.''
+#:Contract no friendship, or even '''acquaintance''', with a guileful man. - [[Sir W. Jones]]
 #A person or persons with whom one is acquainted.
+#:'''Quotations'''
+#:*Montgomery was an old [[acquaintance]] of Ferguson. - [[Thomas Macaulay]]
+#:'''Usage notes:''' In this sense the collective term acquaintance was formerly both singular and plural, but it is now commonly singular, and has the regular plural '''acquaintances'''; thus the obsolete
+#:*To be of acquaintance, to be intimate
+#:*To take acquaintance of or with
+#:*To make the acquaintance of.
 
-====Usage====
-[[Acquaintance]], [[Familiarity]], [[Intimacy]]. These words  mark different degrees of closeness in social  intercourse. Acquaintance arises from occasional  intercourse; as, our acquaintance has been a brief  one. We can speak of a slight or an intimate  acquaintance. Familiarity is the result of continued  acquaintance. It springs from persons being frequently  together, so as to wear off all restraint and reserve; as, the familiarity of old companions. Intimacy is the  result of close connection, and the freest interchange  of thought; as, the intimacy of established  friendship.
+====Usage notes====
+*[[Acquaintance]], [[Familiarity]], [[Intimacy]]. 
+*These words  mark different degrees of closeness in social  intercourse. 
+*'''Acquaintance''' arises from occasional intercourse; as, our '''acquaintance''' has been a brief  one. We can speak of a slight or an intimate  acquaintance. 
+**Our admiration of a famous man lessens upon our nearer acquaintance with him. - [[Joseph Addison]]
+*'''Familiarity''' is the result of continued  acquaintance. It springs from persons being frequently  together, so as to wear off all restraint and reserve; as, the '''familiarity''' of old companions. 
+**We contract at last such a familiarity with them as makes it difficult and irksome for us to call off our minds. - [[Atterbury?]]
+*'''Intimacy''' is the  result of close connection, and the freest interchange  of thought; as, the '''intimacy''' of established  friendship.
+**It is in our power to confine our friendships and intimacies to men of virtue. - [[Rogers?]]
 
 ====Synonyms====
 [[Familiarity]]; [[intimacy]]; [[fellowship]]; [[knowledge]].
+
+----
