--- a/wiki/expose.wikitext
+++ b/wiki/expose.wikitext
@@ -1,11 +1,15 @@
-===[[Verb]]===
+==English==
+===Verb===
+'''expose'''
 
 #to [[uncover]], [[make]] [[visible]], [[bring]] to [[daylight]]
 #to subject [[photograph]]ic [[film]] to [[light]] [[thus]] [[ruin]]ing it or [[take|taking]] a [[picture]] if [[control]]led
 
-====[[Translations]]====
-
+====Translations====
+*Chinese: [[揭发]] (jiefa), [[揭露]] (jielu)
 *[[Dutch]]: [[zichtbaar]] [[maken]] (1), [[blootstellen]] (2)
 *[[Finnish]]: [[paljastaa]] (1), [[valottaa]] (2)
-*[[French]]: [[exposer]]
+*French: [[exposer]]
+*Italian: [[esporre]]
+*Japanese: [[晒す]] ([[さらす]])
 *[[Latin]]: [[exponere]]
