--- a/wiki/%E6%B4%92.wikitext
+++ b/wiki/%E6%B4%92.wikitext
@@ -13,20 +13,20 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#sprinkle
-*# scatter
-*# pour
-*# to wipe away
-*# to shiver
+*# [[sprinkle]]
+*# [[scatter]]
+*# [[pour]]
+*# to [[wipe away]]
+*# to [[shiver]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': cǔi (cui3), sǎ (sa3), sěn (sen3), xǐ (xi3), xiǎn (xian3), xùn (xun4)
+*** '''[[Pinyin]]''': cuǐ (cui3), sǎ (sa3), sěn (sen3), xǐ (xi3), xiǎn (xian3), xùn (xun4)
 *** '''[[Wade-Giles]]''': ts'ui<sup>3</sup>, sa<sup>3</sup>, sen<sup>3</sup>, hsi<sup>3</sup>, hsien<sup>3</sup>, hsün<sup>4</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
@@ -37,11 +37,19 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[灑]]
 
+===Compounds===
+*[[洒泪]]
+*[[洒落]]
+*[[洒然]]
+*[[洒洒]]
+*[[洒扫]]
+*[[洒脱]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[せい]] (sei), [[せん]] (sen), [[しゃ]] (sha)
