--- a/wiki/%E6%99%92.wikitext
+++ b/wiki/%E6%99%92.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': dry in sun, expose to sun
+* '''Common Meaning''': [[dry]] in sun, [[expose]] to sun
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -31,11 +31,22 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[曬]]
 
+===Compounds===
+*[[晒场]]
+*[[晒干]]
+*[[晒黑]]
+*[[晒暖儿]]
+*[[晒台]]
+*[[晒太阳]]
+*[[晒图]]
+*[[晒烟]]
+*[[晒种]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[さい]] (sai), [[し]] (shi)
