--- a/wiki/natural_gas.wikitext
+++ b/wiki/natural_gas.wikitext
@@ -5,12 +5,14 @@
 
 ===Translations===
 *[[Catalan]]: [[gas natural]] ''m''
+*Chinese: [[天然气]], [[天然煤气]]
 *[[Dutch]]: [[aardgas]] ''n''
-*[[French]]: [[gaz naturel]] ''m''
-*[[German]]: [[Erdgas]] ''n''
+*French: [[gaz naturel]] ''m''
+*German: [[Erdgas]] ''n''
 *[[Indonesian]]: [[gas alam]]
 *[[Interlingua]]: [[gas natural]]
-*[[Japanese]]: [[天然ガス]] (てんねんがす, tennen-gasu)
+*Italian: [[gas naturale]] ''m''
+*Japanese: [[天然ガス]] (てんねんガス, tennen-gasu)
 *[[Portuguese]]: [[gás natural]] ''m''
 *[[Romanian]]: [[gaz natural]] ''n''
-*[[Spanish]]: [[gas natural]] ''m''
+*Spanish: [[gas natural]] ''m''
