--- a/wiki/jargon.wikitext
+++ b/wiki/jargon.wikitext
@@ -1,22 +1,23 @@
 ==English==
 ===Pronunciation===
-:[[International Phonetic Alphabet|IPA]]: /'ʤɑɻgʌn/
+*/dʒɑː(r)ɡən/, /<tt>dZA:(r)g@n</tt>/
 
 === Etymology ===
 :Old French: ''jargon'', meaning ''gibberish''.
 
 === Noun ===
-'''jargon'''
+'''jargon''' (''uncountable in most senses'')
 
-#[[technical]] [[terminology]] unique to a particular subject.
-#language characteristic of a particular [[group]].
-#speech or language that is [[incomprehensible]] or [[unintelligible]]; [[gibberish]].
+#(''uncountable'') [[technical]] [[terminology]] unique to a particular subject.
+#(''countable'') language characteristic of a particular [[group]].
+#(''uncountable'') speech or language that is [[incomprehensible]] or [[unintelligible]]; [[gibberish]].
 #a variety of [[zircon]]. (= jargoon)
 
-=== Synonyms ===
-:[[vernacular]], [[slang]].
+==== Synonyms ====
+*[[slang]]
+*[[vernacular]]
 
-=== Translations ===
+==== Translations ====
 *Chinese: [[行話]] (xín huà) (1, 2), [[隱語]] (yǐn huà) or [[黑話]] (hēi huà) (3), [[黃鋯石]] (jīng gào shí) (4)
 *Dutch: jargon ''n'', [[vaktaal]] ''f''
 *Finnish: [[ammattikieli]] (1, 2), jargon (1, 2), [[slangi]] (2), [[mongerrus]] (3)
@@ -25,7 +26,10 @@
 *Japanese: [[隠語]] (ingo), [[専門用語]] (semmon'yōgo)
 *[[Persian]]: [[زبان تخصصی]] (Zaban-e Takhassosi), [[زبان مخفی]] (Zaban-e makhfi)
 *Russian: [[жаргон]] ''m'' (zhargon)
-*Volapük: jargon
+*[[Volapük]]: jargon
+
+===See also===
+*[[cant]]
 
 ----
 
