--- a/wiki/gas.wikitext
+++ b/wiki/gas.wikitext
@@ -81,8 +81,22 @@
 '''gas''' ''m''
 
 #gas
+# [[petrol]]
+
+===Synonym===
+*[[benzina]]
+
+===Related terms===
+*[[gasare]]
+*[[gasolina]]
+*[[gassare]]
+*[[gassificare]]
+*[[gassista]]
+*[[gassometro]]
+*[[gassoso]]
 
 ----
+
 ==Spanish==
 ===Noun===
 '''gas''' ''m''
