--- a/wiki/water.wikitext
+++ b/wiki/water.wikitext
@@ -2,7 +2,7 @@
 ===Etymology===
 From Middle English, from Old English [[wæter]]. Cognates include [[wet]], Greek [[ὕδωρ]] (hydor), Latin [[unda]], ''wave'', Gothic [[𐍅𐌰𐍄𐍉]], German [[Wasser]], Russian [[вода]] (voda).
 ===Pronunciation===
-*wô'tə(r), /ˈwɔːtə(r)/, /"wO:t@(r)/
+*wô'tə(r), /ˈwɔːtə(r)/, /<tt>"wO:t@(r)</tt>/
 <!-- this is British pronunciation but US pronunciation differs only due to rhoticity and cot-caught merger and is therefore systematic and does not warrant a separate transcription -->
 
 ===Noun===
