--- a/wiki/gas.wikitext
+++ b/wiki/gas.wikitext
@@ -12,6 +12,7 @@
 *(3): (''slang'') [[fart]] (when gas is released)
 
 ====Translations====
+*Chinese: [[气体]], [[煤气]], [[可燃气]]
 *Dutch: gas ''n''
 *Finnish: [[kaasu]] (1); [[bensiini]] (2)
 *French: [[gaz]] ''m''
