+phrasebook category <where is the toilet#36351>

--- a/wiki/where_is_the_toilet.wikitext
+++ b/wiki/where_is_the_toilet.wikitext
@@ -19,3 +19,5 @@
 *{{es}}: [[¿Dónde está el baño?]]
 *{{sv}}: [[Var är toaletten?]], [[Var finns toaletten?]]
 *{{tpi}}: [[Smolhaus i stap we?]]
+
+[[Category:Phrasebook]]
