--- a/wiki/%E9%9B%85.wikitext
+++ b/wiki/%E9%9B%85.wikitext
@@ -26,6 +26,27 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': nga5
 
+===Compounds===
+*[[雅淡]]
+*[[雅观]]
+*[[雅号]]
+*[[雅洁]]
+*[[雅静]]
+*[[雅丽]]
+*[[雅量]]
+*[[雅趣]]
+*[[雅士]]
+*[[雅俗共赏]]
+*[[雅玩]]
+*[[雅望]]
+*[[雅兴]]
+*[[雅言]]
+*[[雅意]]
+*[[雅乐]]
+*[[雅正]]
+*[[雅致]]
+*[[雅座]], [[雅座儿]]
+
 * '''Other info''': 
 
 ----
