+phrasebook category <what's your name#36348>

--- a/wiki/what%27s_your_name.wikitext
+++ b/wiki/what%27s_your_name.wikitext
@@ -1,3 +1,4 @@
+==English==
 ===Expression===
 '''[[what|What]]'s [[your]] [[name]]?'''
 
@@ -49,3 +50,5 @@ For some languages a difference is made between polite and casual forms.
 *:[[Tên ông là gì?]]
 *::formal; to a male who is older than the speaker
 *:All these translations literally mean "Name belonging to you is what?"
+
+[[Category:Phrasebook]]
