+phrasebook category <my name is#36350>

--- a/wiki/my_name_is.wikitext
+++ b/wiki/my_name_is.wikitext
@@ -1,3 +1,4 @@
+==English==
 ===Expression===
 '''[[my|My]] [[name]] [[is]] ...'''
 
@@ -65,3 +66,5 @@
 *:[[ميرا نام ... ہے]] (merā nām ... hai) ''My name ... is''
 *Vietnamese:
 *:[[Tên của tôi là...]] ([[tôi]] varies according to audience)
+
+[[Category:Phrasebook]]
