/* Translations */ <what is your name#36365>

--- a/wiki/what_is_your_name.wikitext
+++ b/wiki/what_is_your_name.wikitext
@@ -15,6 +15,8 @@
 *Bulgarian:
 *:(Informal) [[Как се казваш?]] (Kak se kazvash?)
 *:(Formal) [[Как се казвате?]] (Kak se kazvate?)
+*Chinese:
+*:(Formal) [[您贵姓?]] (Nin guixing?)
 *Dutch:
 *:[[Hoe heet u?]] (formal), [[Hoe heet jij?]]/[[media:Hoe_heet_jij.ogg|hu het jɛɪ?]]/ (casual)
 *:(''literal translation'') [[Wat is uw naam?]] (formal), [[Wat is jouw naam?]] (casual)
@@ -30,6 +32,8 @@
 *:(''literal translation'') [[Wie ist Ihr Name?]] (formal), [[Wie ist dein Name?]] (casual)
 *Hebrew:
 *:[[מה שמך?]] (Ma shimkha?)
+*Italian:
+*:(Formal [[Come si chiama Lei?]] (''How do you call yourself?'')
 *Japanese:
 *:[[あなたの名前はなんですか？]] (anata no namae wa nan desu ka?)
 *[[Marshallese]]: 
