--- a/wiki/%E5%BD%92.wikitext
+++ b/wiki/%E5%BD%92.wikitext
@@ -35,8 +35,61 @@
 
 ===Compounds===
 *[[归案]]
+*[[归并]]
+*[[归程]]
+*[[归除]]
+*[[归档]]
+*[[归队]]
+*[[归附]]
+*[[归根]]
 *[[归根结底]], [[归根结柢]]
+*[[归公]]
+*[[归功]]
+*[[归国]]
+*[[归国华侨]]
+*[[归航]]
+*[[归化]]
 *[[归还]]
+*[[归回]]
+*[[归集]]
+*[[归结]]
+*[[归咎]]
+*[[归聚]]
+*[[归客]]
+*[[归口]]
+*[[归来]]
+*[[归理]]
+*[[归拢]]
+*[[归路]]
+*[[归谬法]]
+*[[归纳]]
+*[[归期]]
+*[[归侨]]
+*[[归去]]
+*[[归属]]
+*[[归顺]]
+*[[归宿]]
+*[[归天]]
+*[[归田]]
+*[[归途]]
+*[[归西]]
+*[[归降]]
+*[[归向]]
+*[[归心]]
+*[[归心似箭]]
+*[[归省]]
+*[[归依]]
+*[[归隐]]
+*[[归于]]
+*[[归藏]]
+*[[归着]]
+*[[归真返璞]]
+*[[归整]]
+*[[归置]]
+*[[归终]]
+*[[归舟]]
+*[[归总]]
+*[[归罪]]
 
 * '''Other info''': 
 
