/* Translations */ not scots but gaelic <where is the toilet#36351>

--- a/wiki/where_is_the_toilet.wikitext
+++ b/wiki/where_is_the_toilet.wikitext
@@ -10,7 +10,7 @@
 *{{fi}}: [[Missä on vessa?]]
 *{{fr}}: [[Où sont les toilettes]]
 *{{de}}: [[Wo ist die Toilette?]]
-*{{sco}}: [[Càit a bheil an taigh beag?]]
+*[[Gaelic]] (Scotland): [[Càit a bheil an taigh beag?]]
 *{{he}}: [[איפה השרוטים]] (eifo ha sherotim)
 *{{it}}: [[Dove sono i gabinetti?]]
 *{{ja}}: [[トイレはどこですか。]] (toire wa doko des' ka?)
