+ ? <where is the toilet#36351>

--- a/wiki/where_is_the_toilet.wikitext
+++ b/wiki/where_is_the_toilet.wikitext
@@ -8,7 +8,7 @@
 *{{nl}}: [[Waar is het toilet?]] /[[media:Waar_is_het_toilet.ogg|Waːʀ ɪs hət twalɛt?]]/
 *{{eo}}: [[Kie estas la necesejo?]]
 *{{fi}}: [[Missä on vessa?]]
-*{{fr}}: [[Où sont les toilettes]]
+*{{fr}}: [[Où sont les toilettes ?]]
 *{{de}}: [[Wo ist die Toilette?]]
 *[[Gaelic]] (Scotland): [[Càit a bheil an taigh beag?]]
 *{{he}}: [[איפה השרוטים]] (eifo ha sherotim)
