wikifying, stub <infirmarian#511017>

--- a/wiki/infirmarian.wikitext
+++ b/wiki/infirmarian.wikitext
@@ -1,1 +1,3 @@
-An Infirmarian worked in a nunnery/monestary. It was the Infirmarians job to care for nuns who became ill. They also cared for old and sick people living in the nunnery.
+An '''infirmarian''' worked in a [[nunnery]] or [[monastery]]. It was the infirmarian's job to care of [[nun]]s who became ill. They also cared for old and sick people living in the nunnery.
+
+{{stub}}
