--- a/wiki/%E8%81%9A.wikitext
+++ b/wiki/%E8%81%9A.wikitext
@@ -10,11 +10,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': assemble, meet together, collect
+* '''Common Meaning''': [[assemble]], meet together, [[collect]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -26,11 +26,49 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': jeui6
 
+# (''chemistry'') [[poly-]]
+
+===Compounds===
+*[[聚宝盆]]
+*[[聚苯乙烯]]
+*[[聚变]]
+*[[聚丙烯]]
+*[[聚餐]]
+*[[聚赌]]
+*[[聚光灯]]
+*[[聚光镜]]
+*[[聚合]]
+*[[聚合物]]
+*[[聚汇]]
+*[[聚会]]
+*[[聚伙]]
+*[[聚积]]
+*[[聚集]]
+*[[聚歼]]
+*[[聚焦]]
+*[[聚精会神]]
+*[[聚居]]
+*[[聚敛]]
+*[[聚拢]]
+*[[聚氯乙烯]]
+*[[聚落]]
+*[[聚齐]]
+*[[聚醛树脂]]
+*[[聚沙成塔]]
+*[[聚首]]
+*[[聚蚊成雷]]
+*[[聚星]]
+*[[聚乙烯]]
+*[[聚议]]
+*[[聚珍版]]
+*[[聚酯]]
+*[[聚众]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[しゅう]] (shū), [[しゅ]] (shu), [[じゅ]] (ju)
